src/objects/Work_Request__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Work Requests</relationshipLabel>
        <relationshipName>Work_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Additional_Questions_Comments__c</fullName>
        <label>Additional Questions/Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMS_Username_Password__c</fullName>
        <inlineHelpText>The CMS is used for editing the website products</inlineHelpText>
        <label>CMS Username &amp; Password</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMS_website_address__c</fullName>
        <inlineHelpText>Where do you login? (i.e www.website.com/admin)</inlineHelpText>
        <label>CMS website address</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <picklist>
            <picklistValues>
                <fullName>Salesforce</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prospects</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clientpanel / Adwords Weekly Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO Ranking Issue / Fortnightly Report</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PC / Headset / Bria Issue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>External Newsletters</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Password Reset</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Google Code</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Others</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Feed Install</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Completed_all_fields_above_clearly__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Designs will not be started unless ALL applicable information above has been provided</inlineHelpText>
        <label>Completed all fields above clearly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Date_Job_Required__c</fullName>
        <inlineHelpText>What is your preferred delivery date? Must be Minimum 2 weeks from date of request</inlineHelpText>
        <label>Date Job Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_of_Request__c</fullName>
        <label>Date of Request</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Delivery_to__c</fullName>
        <inlineHelpText>Please include name or department to deliver final job.</inlineHelpText>
        <label>Delivery to</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department_Outlet__c</fullName>
        <label>Department/Outlet</label>
        <picklist>
            <picklistValues>
                <fullName>Client Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SEO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Design_Approval_Required_by__c</fullName>
        <inlineHelpText>Please list all staff members that need to see and approve designs.</inlineHelpText>
        <label>Design Approval Required by</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FTP_Hosting_Logins__c</fullName>
        <inlineHelpText>These are the logins to access the website hosting account and database</inlineHelpText>
        <label>FTP Hosting Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FTP_Hosting_Password__c</fullName>
        <label>FTP Hosting Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Format__c</fullName>
        <label>Formats</label>
        <picklist>
            <picklistValues>
                <fullName>pdf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>jpg</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>png</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>pps, ppt (PowerPoint)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>tiff</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>doc, docx (word document)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>csv,xls (excel document)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mp4, wma</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>mp3,</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>google document</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>google slide</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>prints (hardcopy)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>to be determined by marketing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Further_Instructions__c</fullName>
        <inlineHelpText>Please list any further instructions clearly in this section</inlineHelpText>
        <label>Further Instructions</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Google_Merchant_Logins__c</fullName>
        <inlineHelpText>Google account to access merchant centre</inlineHelpText>
        <label>Google Merchant Logins</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Job_Name__c</fullName>
        <label>Job Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Login_URL__c</fullName>
        <label>Login URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Password__c</fullName>
        <label>Password</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Normal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Purpose_Intention__c</fullName>
        <inlineHelpText>Please give a quick summary on why this item is needed and where they will be distributed?</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Requested_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Requested By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Work_Requests</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Response__c</fullName>
        <label>Response</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Size__c</fullName>
        <label>Size</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spell_checked_text_for_content_accuracy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spell checked text for content accuracy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>New</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Doable</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Supplied_images_logos_txt_electronically__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Supplied images,logos,txt electronically</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Text__c</fullName>
        <label>Text</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Username__c</fullName>
        <label>Username</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Website_Adress__c</fullName>
        <label>Website Adress</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>flag__c</fullName>
        <formula>IF(ISPICKVAL(Priority__c, &apos;High&apos;) , IMAGE(&apos;/img/samples/flag_red.gif&apos;,&apos;High&apos;) , 
IF(ISPICKVAL(Priority__c, &apos;Normal&apos;) , IMAGE(&apos;/img/samples/flag_yellow.gif&apos;,&apos;Normal&apos;) , 
IF(ISPICKVAL(Priority__c, &apos;Low&apos;) , IMAGE(&apos;/img/samples/flag_green.gif&apos;,&apos;Low&apos;) , 
IMAGE(&apos;/s.gif&apos;,&apos;Priority Flag&apos;))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>flag</label>
        <type>Text</type>
    </fields>
    <label>Work Request</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>Job_Name__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>Date_Job_Required__c</columns>
        <columns>Date_of_Request__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Closed_IT_Work_Request</fullName>
        <columns>NAME</columns>
        <columns>flag__c</columns>
        <columns>Category__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Work_Request__c.IT</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Closed IT Work Request</label>
    </listViews>
    <listViews>
        <fullName>Closed_Web_Work_Request</fullName>
        <columns>NAME</columns>
        <columns>RECORDTYPE</columns>
        <columns>flag__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Work_Request__c.Web,Work_Request__c.Web_Data_Feed</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Completed</value>
        </filters>
        <label>Closed Web Work Request</label>
    </listViews>
    <listViews>
        <fullName>New_IT_Work_Request</fullName>
        <columns>NAME</columns>
        <columns>flag__c</columns>
        <columns>Category__c</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Work_Request__c.IT</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New IT Work Request</label>
    </listViews>
    <listViews>
        <fullName>New_Marketing_Work_Request</fullName>
        <columns>NAME</columns>
        <columns>Priority__c</columns>
        <columns>Job_Name__c</columns>
        <columns>Status__c</columns>
        <columns>Date_Job_Required__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Work_Request__c.Marketing_Work_Request</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New</value>
        </filters>
        <label>New Marketing Work Request</label>
    </listViews>
    <listViews>
        <fullName>New_Web_Work_Request</fullName>
        <columns>NAME</columns>
        <columns>flag__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Subject__c</columns>
        <columns>Status__c</columns>
        <columns>Due_Date__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Work_Request__c.Web,Work_Request__c.Web_Data_Feed</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>New,In Progress</value>
        </filters>
        <label>New Web Work Request</label>
    </listViews>
    <nameField>
        <displayFormat>WR-#{00000}</displayFormat>
        <label>Work Request Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Work Requests</pluralLabel>
    <recordTypes>
        <fullName>IT</fullName>
        <active>true</active>
        <label>IT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Marketing_Work_Request</fullName>
        <active>true</active>
        <label>Marketing Work Request</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web</fullName>
        <active>true</active>
        <description>Google Codes (Tag Manager, Tracking Code etc)</description>
        <label>Web(Google Codes)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Web_Data_Feed</fullName>
        <active>true</active>
        <description>Data Feed Install</description>
        <label>Web(Data Feed)</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>